--- a/activities_template/click_activity.xaml
+++ b/activities_template/click_activity.xaml
@@ -1,22 +1,36 @@
-<ui:Click AlterIfDisabled="{x:Null}" DelayBefore="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" SimulateClick="{x:Null}" ClickType="CLICK_SINGLE" sap:VirtualizedContainerService.HintSize="334,68" sap2010:WorkflowViewState.IdRef="Click_2" KeyModifiers="None" MouseButton="BTN_LEFT">
-      <ui:Click.CursorPosition>
+<ui:Click xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+          xmlns:ui="http://schemas.uipath.com/workflow/activities"
+          xmlns:sap="http://schemas.uipath.com/sap/activities"
+          xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation"
+          AlterIfDisabled="{x:Null}" 
+          DelayBefore="{x:Null}" 
+          DelayMS="{x:Null}" 
+          SendWindowMessages="{x:Null}" 
+          SimulateClick="{x:Null}" 
+          ClickType="CLICK_SINGLE" 
+          sap:VirtualizedContainerService.HintSize="334,68" 
+          sap2010:WorkflowViewState.IdRef="Click_2" 
+          KeyModifiers="None" 
+          MouseButton="BTN_LEFT">
+    <ui:Click.CursorPosition>
         <ui:CursorPosition Position="Center">
-          <ui:CursorPosition.OffsetX>
-            <InArgument x:TypeArguments="x:Int32" />
-          </ui:CursorPosition.OffsetX>
-          <ui:CursorPosition.OffsetY>
-            <InArgument x:TypeArguments="x:Int32" />
-          </ui:CursorPosition.OffsetY>
+            <ui:CursorPosition.OffsetX>
+                <InArgument x:TypeArguments="x:Int32" />
+            </ui:CursorPosition.OffsetX>
+            <ui:CursorPosition.OffsetY>
+                <InArgument x:TypeArguments="x:Int32" />
+            </ui:CursorPosition.OffsetY>
         </ui:CursorPosition>
-      </ui:Click.CursorPosition>
-      <ui:Click.Target>
-        <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Selector="{x:Null}" >
-          <ui:Target.TimeoutMS>
-            <InArgument x:TypeArguments="x:Int32" />
-          </ui:Target.TimeoutMS>
-          <ui:Target.WaitForReady>
-            <InArgument x:TypeArguments="ui:WaitForReady" />
-          </ui:Target.WaitForReady>
+    </ui:Click.CursorPosition>
+    <ui:Click.Target>
+        <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Selector="{x:Null}">
+            <ui:Target.TimeoutMS>
+                <InArgument x:TypeArguments="x:Int32" />
+            </ui:Target.TimeoutMS>
+            <ui:Target.WaitForReady>
+                <InArgument x:TypeArguments="ui:WaitForReady" />
+            </ui:Target.WaitForReady>
         </ui:Target>
-      </ui:Click.Target>
-    </ui:Click>
+    </ui:Click.Target>
+</ui:Click>
