--- a/activities_template/open_browser_activity.xaml
+++ b/activities_template/open_browser_activity.xaml
@@ -1,4 +1,4 @@
-<ui:OpenBrowser CommunicationMethod="{x:Null}" Hidden="{x:Null}" NewSession="{x:Null}" Private="{x:Null}" UiBrowser="{x:Null}" BrowserType="Chrome" DisplayName="Open Browser" sap:VirtualizedContainerService.HintSize="466.666666666667,187.333333333333" sap2010:WorkflowViewState.IdRef="OpenBrowser_1" Url="www.google.com">
+<ui:OpenBrowser xmlns:ns0="http://schemas.uipath.com/workflow/activities" >
       <ui:OpenBrowser.Body>
         <ActivityAction x:TypeArguments="x:Object">
           <ActivityAction.Argument>
